<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".view.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearlayout_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button_weather"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_corners"
            android:drawableTop="@drawable/rs_weather"
            android:elevation="4dp"
            android:outlineProvider="background"
            android:text="@string/weather"
            android:textSize="24sp"
            app:autoSizeTextType="uniform"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/button_hikes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_profile"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_corners"
            android:drawableTop="@drawable/rs_profile"
            android:elevation="1dp"
            android:text="@string/profile"
            android:textSize="24sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/button_bmr"
            app:layout_constraintEnd_toStartOf="@+id/button_weather"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_bmr"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/button_corners"
            android:drawableTop="@drawable/rs_bmr"
            android:elevation="1dp"
            android:text="@string/daily_goals"
            android:textSize="24sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_hikes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_profile" />

        <Button
            android:id="@+id/button_hikes"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="80dp"
            android:drawableTop="@drawable/rs_hike"
            android:elevation="6dp"
            android:text="@string/hikes_nearby"
            android:textSize="24sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_bmr"
            app:layout_constraintTop_toBottomOf="@+id/button_weather" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="linearlayout_data" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
