<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/lightMint"
    android:padding="0dp"
    tools:context=".view.ProfileFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_name_hardcoded"
        style="@style/ti_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/purple_mid"
        app:boxStrokeColor="@color/purple_mid"
        app:hintTextAppearance="@style/label_style"
        app:layout_constraintBottom_toTopOf="@+id/tv_loc_hardcoded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ti_style"
        app:startIconDrawable="@drawable/ic_start_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name"
            android:inputType="none"
            android:labelFor="@id/tv_name_hardcoded"
            android:textColor="@color/purple_mid"
            tools:text="First and last" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_weight"
        style="@style/buttonStyle2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:drawableEnd="@drawable/baseline_add_24"
        android:onClick="showWeightPicker"
        android:text="@string/weight"
        android:textAppearance="@style/label_style"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/button_height"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/tv_activity_hardcoded"
        app:layout_constraintTop_toTopOf="@+id/button_height" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_height"
        style="@style/buttonStyle2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/baseline_add_24"
        android:onClick="showHeightPicker"
        android:text="@string/height"
        android:textAppearance="@style/label_style"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/tv_activity_hardcoded"
        app:layout_constraintStart_toEndOf="@+id/button_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_hardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_age"
        style="@style/buttonStyle2"
        android:layout_width="194dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/baseline_add_24"
        android:onClick="openDatePicker"
        android:text="Age    "
        android:textAppearance="@style/label_style"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@+id/tv_loc_hardcoded"
        app:layout_constraintTop_toBottomOf="@+id/tv_loc_hardcoded" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_sex_hardcoded"
        style="@style/dd_style"
        android:layout_width="194dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:boxStrokeColor="@color/purple_mid"
        app:hintTextAppearance="@style/label_style"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/tv_loc_hardcoded"
        app:layout_constraintTop_toBottomOf="@+id/tv_loc_hardcoded"
        app:shapeAppearance="@style/ti_style">

        <AutoCompleteTextView
            android:id="@+id/tv_sex_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="@string/sex_label"
            android:inputType="none"
            android:labelFor="@id/tv_activity_hardcoded"
            android:textColor="@color/purple_mid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_activity_hardcoded"
        style="@style/dd_style"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeColor="@color/purple_mid"
        app:hintTextAppearance="@style/label_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_age"
        app:shapeAppearance="@style/ti_style">

        <AutoCompleteTextView
            android:id="@+id/tv_activityLevel_data"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:padding="10dp"
            android:hint="@string/activity_level"
            android:inputType="none"
            android:labelFor="@id/tv_activity_hardcoded"
            android:textColor="@color/purple_mid" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    TODO fix dropdown selection options after selecting
         an item, currently only shows selection-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_loc_hardcoded"
        style="@style/dd_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeColor="@color/purple_mid"
        app:hintTextAppearance="@style/label_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_hardcoded"
        app:shapeAppearance="@style/dd_style">

        <AutoCompleteTextView
            android:id="@+id/tv_loc_data"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_label"
            android:labelFor="@id/tv_activity_hardcoded"
            android:textColor="@color/purple_mid"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_submit"
        style="@style/buttonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_picture" />

    <Button
        android:id="@+id/button_picture"
        style="@style/buttonStyle2"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:text="Edit Photo"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintEnd_toEndOf="@+id/button_submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_submit"
        app:layout_constraintTop_toBottomOf="@+id/button_weight"
        app:layout_constraintVertical_chainStyle="packed" />

    <!--    <EditText-->
    <!--        android:id="@+id/et_name"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:layout_marginEnd="32dp"-->
    <!--        android:hint="Name:"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </EditText>-->

    <!--    <Button-->
    <!--        android:id="@+id/button_done"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Done"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/et_name" />-->

</androidx.constraintlayout.widget.ConstraintLayout>